--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "dependencies": {
     "@react-native-community/hooks": "^2.6.0",
+    "@react-native-community/picker": "1.6.6",
     "expo": "~39.0.2",
     "expo-constants": "^9.2.0",
     "expo-status-bar": "~1.0.2",
+    "formik": "^2.1.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
